Bug 92918 - Engineering notation lost with buttons Add/Delete Decimal Place
Summary: Engineering notation lost with buttons Add/Delete Decimal Place
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-24 21:15 UTC by Laurent Balland
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2015-07-24 21:15:15 UTC
Description: When Engineering notation is selected in a format, clicking on "Add Decimal Place" or "Delete Decimal Place" buttons deselect Engineering Notation option.

Steps to reproduce:
1. Enter a value in scientific format such as 1.23456e4
2. In Sidebar or Format > Cells > Numbers, check "Engineering notation" (Value looks like 12.35E+03 as expected)
3. Click on button "Add Decimal Place"

Actual behaviour:
Value is displayed as 1.235E+04 (Engineering notation is lost)

Expected behaviour:
Engineering notation should be kept and value should be displayed as 12.346E+03
Comment 1 Commit Notification 2015-07-30 20:06:30 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f4bdd7989f237e8e90ac94c2798e0ea0fb31af6b

tdf#92918 Engineering notation lost with Add/Delete Decimal Place

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2015-07-31 15:39:58 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1333692475201ce1be7a037397158051d8bd039&h=libreoffice-5-0

tdf#92918 Engineering notation lost with Add/Delete Decimal Place

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.