tdf#92918 Engineering notation lost with Add/Delete Decimal Place

With scientific format, use the trick of thousand separator to detect
Engineering notation.

Change-Id: I7acdfb8bec646f9d6c1a17c334b60fa9708c8111
Reviewed-on: https://gerrit.libreoffice.org/17406
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit f4bdd7989f237e8e90ac94c2798e0ea0fb31af6b)
Reviewed-on: https://gerrit.libreoffice.org/17440